syntax= "proto3";

package random_package;

service Random {
    rpc PingPong(PingRequest) returns (PingResponse){}
}

message PingRequest{
    string message= 1;
}

message PingResponse{
    string message= 1;
}


